# montagu-system

./: README.md  import.md
.github/workflows/: api.yml  clean-packit.yml  db.yml  deploy-release.yml  deploy-test.yml  proxy.yml  task-queue.yml  webapps.yml
api/: .gitignore  .gitmodules  .travis.yml  README.md
api/buildkite/: build-app.sh  common  run-blackbox-tests.sh
api/ci/: common  run-blackbox-tests.sh
api/docker/: blackbox.Dockerfile
api/scripts/: clear-docker.sh  common  dev-run.sh  docker-config.properties  start-all.sh  start-api.sh  start-database.sh  start-dependencies.sh  start-packit.sh  start-proxy.sh  start-task-queue.sh  stop-packit.sh  stop-proxy.sh  stop-task-queue.sh  task-queue-config.yml  test-cli.sh
api/scripts/docker-packit/: packit.yml
api/scripts/localhost-packit/: packit.yml
api/scripts/webapps-packit/: packit.yml
api/src/: build.gradle
api/src/app/: Dockerfile  build.gradle
api/src/config/: default.properties
api/src/databaseTests/: build.gradle
api/src/generateTestData/: addTestUser.sh  generate.sh
db/: Dockerfile  README.md
db/annex/: README.md  deploy.sh
db/migrations/: Dockerfile  README.md  flyway.conf
db/scripts/: start-db  stop-db  test-db  update-docs
deploy/: .gitignore  LICENSE.txt  README.md  pyproject.toml
deploy/.github/workflows/: release.yml  test.yml
deploy/config/: montagu.yml
deploy/config/acme/: montagu.yml
deploy/config/basic/: diagnostic-reports.yml  montagu.yml  task-queue.yml
deploy/config/ci/: montagu.yml  task-queue.yml
deploy/config/complete/: montagu.yml  task-queue.yml
deploy/config/real/: montagu.yml
deploy/config/test/: montagu.yml  task-queue.yml
deploy/src/montagu_deploy/: __about__.py  __init__.py  admin.py  certbot.py  cli.py  config.py  database.py  montagu_constellation.py
deploy/tests/: admin.py  conftest.py  orderly-web.yml  packit.yml  test_cli.py  test_config.py  test_constellation.py  test_integration.py  utils.py
proxy/: .gitignore  404.html  Dockerfile  README.md  babel.config.js  build.dockerfile  ci.sh  ci_tests.sh  dev.sh  docker-compose.yml  entrypoint.sh  index.html  integration-tests.dockerfile  jest.config.js  jest.integration.config.js  nginx.conf  nginx.montagu.conf  package-lock.json  package.json  privacy.html  shared-build-env.dockerfile
proxy/buildkite/: pipeline.yml
proxy/dev/: Dockerfile  build-minimal-image.sh  buildMinimal.dockerfile  docker-compose.yml  minimal.Dockerfile  minimal.dockerfile  nginx.minimal.conf  run-build-minimal.sh  run-dependencies.sh  run.sh
proxy/montagu_emails/: 2025-04-10T11:05:53.242154Z
proxy/resources/: index.js  new-password.html  privacy.html  reset-password.html  style.css
proxy/scripts/: build-image.sh  ci.sh  clear-docker.sh  cli.sh  common  dev.sh  install-chromedriver.sh  make-build-env.sh  make-integration-test-image.sh  make-shared-build-env.sh  orderly_web_cli.sh  orderlywebconfig.properties  packit-create-test-user.sh  packitconfig.properties  run-build.sh  run-dependencies.sh  run-integration-tests.sh
proxy/tests/: montagu-login.test.js  montagu-utils-test.js  montagu-utils.test.js  packit-auth.test.js  selenium.test.js  tests.dockerfile  tests_docker.sh
scripts/: common.sh  docker-compose.yml  run-all.sh  start-packit.sh
task-queue/: README.md  docker-compose.yml
task-queue/config/: docker_config.yml
task-queue/scripts/: build-docker.sh  common.sh  montagu_cli.sh  packit.yml  run-dependencies.sh  run-docker-worker.sh
webapps/: README.md  docker-compose.yml
webapps/app/: .gitignore  Dockerfile  README.md  package.json
webapps/config/: api_version
(+186 files in other folders)
