[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "montagu-deploy"
dynamic = ["version"]
description = 'Deploy tool for the Montagu web app'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Alex", email = "alex.hill@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "constellation>=1.1.2",
  "docopt",
  "psycopg2"
]

[project.urls]
Documentation = "https://github.com/unknown/montagu-deploy#readme"
Issues = "https://github.com/unknown/montagu-deploy/issues"
Source = "https://github.com/unknown/montagu-deploy"

[project.scripts]
montagu = "montagu_deploy.cli:main"

[tool.hatch.version]
path = "src/montagu_deploy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "celery",
  "coverage[toml]>=6.5",
  "orderly_web",
  "pytest",
  "redis",
  "vault_dev",
  "YTClient"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-report-xml = [
    "- coverage combine",
    "coverage xml",
]
cov = [
  "test-cov",
  "cov-report",
]
cov-ci = [
    "test-cov",
    "cov-report-xml",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/montagu_deploy tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore print statements
  "T201"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["montagu_deploy"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
  "src/montagu_deploy/__about__.py",
]

[tool.coverage.paths]
montagu_deploy = ["src/montagu_deploy", "*/montagu-deploy/src/montagu_deploy"]
tests = ["tests", "*/montagu-deploy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
